# pfapack-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: lib.rs  pfapack-bind.rs  skbpf10.rs  skbpfa.rs  skbtrd.rs  skpf10.rs  skpfa.rs  sktrd.rs  sktrf.rs
tests/: skpfa_test.rs
